Modernize QueuedNotificationManagerTest
Use not use Collections.emptyList() nor Arrays.asList().

Change-Id: I5a7c0b5fe0eeb89045863254962fa980448cb93a
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>
(cherry picked from commit 1007d23b9116ab3371ab15ddbebba1779b0b07e8)